--- a/Login.html
+++ b/Login.html
@@ -2,7 +2,7 @@
 <html lang="english">
   <head>
     <title>RFC Indonesia | Login</title>
-    <link rel="icon" type="image/x-icon" href="/public/external/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./public/external/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
@@ -83,10 +83,10 @@
 <!-- navibar link container -->
   <!-- <div class="home-page2-navimenu-container"> -->
     <div class="outlet-navibar-menu">
-      <ul class="flex-row"> <li><a href="/index.html#beranda" class="Page-scroll">Beranda</a></li>
-        <li><a href="./index.html#tentang" class="Page-scroll">Tentang Kami</a></li>
-        <li><a href="./index.html#produk" class="Page-scroll">Produk</a></li>
-        <li><a href="./index.html#prioritas" class="Page-scroll">Mitra</a></li>
+      <ul class="flex-row"> <li><a href="index.html#beranda" class="Page-scroll">Beranda</a></li>
+        <li><a href="index.html#tentang" class="Page-scroll">Tentang Kami</a></li>
+        <li><a href="index.html#produk" class="Page-scroll">Produk</a></li>
+        <li><a href="index.html#prioritas" class="Page-scroll">Mitra</a></li>
         <li><a href="lokasi-outlet.html" class="Page-scroll">Lokasi Outlet</a></li>
         <li class="pembatas">|</li>
         <button class="login-button">
@@ -168,8 +168,8 @@
 
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="/js/Global-script.js"></script>
-<script src="/js/Login.js"></script>
+<script src="./js/Global-script.js"></script>
+<script src="./js/Login.js"></script>
 
 
 
