--- a/lokasi-outlet.html
+++ b/lokasi-outlet.html
@@ -2,7 +2,7 @@
 <html lang="english">
   <head>
     <title>RFC Indonesia | Outlet</title>
-    <link rel="icon" type="image/x-icon" href="/public/external/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./public/external/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
@@ -82,7 +82,7 @@
 <!-- navibar link container -->
   <!-- <div class="home-page2-navimenu-container"> -->
     <div class="outlet-navibar-menu">
-      <ul class="flex-row"> <li><a href="/index.html#beranda" class="Page-scroll">Beranda</a></li>
+      <ul class="flex-row"> <li><a href="./index.html#beranda" class="Page-scroll">Beranda</a></li>
         <li><a href="./index.html#tentang" class="Page-scroll">Tentang Kami</a></li>
         <li><a href="./index.html#produk" class="Page-scroll">Produk</a></li>
         <li><a href="./index.html#prioritas" class="Page-scroll">Mitra</a></li>
