--- a/index.html
+++ b/index.html
@@ -690,8 +690,8 @@
             </div>
           </div>
       </div>
-      <script src="./js/home-page.js"></script>
-      <script src="./js/Global-script.js"></script>
+      <script src="/js/home-page.js"></script>
+      <script src="/js/Global-script.js"></script>
       </div>
       </div>
     </div>
