--- a/Login.html
+++ b/Login.html
@@ -168,8 +168,8 @@
 
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="./js/Global-script.js"></script>
-<script src="./js/Login.js"></script>
+<script src="/js/Global-script.js"></script>
+<script src="/js/Login.js"></script>
 
 
 
