--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="english">
   <head>
     <title>PT RFC FRIEDCHICKEN | Home</title>
-    <link rel="icon" type="image/x-icon" href="/public/external/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="public/external/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
@@ -117,12 +117,12 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
       data-tag="font"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
     <div>
-      <link href="./css/index.css" rel="stylesheet" />
+      <link href="css/index.css" rel="stylesheet" />
       
       <div class="home-page2-container">  
         <div class="Home-Navibar">  
@@ -690,8 +690,8 @@
             </div>
           </div>
       </div>
-      <script src="/js/home-page.js"></script>
-      <script src="/js/Global-script.js"></script>
+      <script src="js/home-page.js"></script>
+      <script src="js/Global-script.js"></script>
       </div>
       </div>
     </div>
