--- a/lokasi-outlet.html
+++ b/lokasi-outlet.html
@@ -2,7 +2,7 @@
 <html lang="english">
   <head>
     <title>RFC Indonesia | Outlet</title>
-    <link rel="icon" type="image/x-icon" href="/public/external/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="public/external/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
@@ -38,11 +38,11 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
       data-tag="font"
     />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div>
-      <link href="./css/lokasi-outlet.css" rel="stylesheet" />
+      <link href="css/lokasi-outlet.css" rel="stylesheet" />
       <div class="outlet-page">
        
 <!-- navibar -->
@@ -282,8 +282,8 @@
 
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="/js/Global-script.js"></script>
-<script src="/js/outlet.js"></script>
+<script src="js/Global-script.js"></script>
+<script src="js/outlet.js"></script>
 
 
 
