--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                   <li><a href="lokasi-outlet.html" class="Page-scroll">Lokasi Outlet</a></li>
                   <li class="pembatas">|</li>
                   <button class="login-button">
-                    <a href="login.html" class="Page-scroll">Login</a>
+                    <a href="/Login.html" class="Page-scroll">Login</a>
                     
                     </button>
                 </ul>
