--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
       select {
         text-transform: none;
       }
-     
+      button,
+      [type="button"],
+      [type="reset"],
+      [type="submit"] {
+        -webkit-appearance: button;
+      }
       button::-moz-focus-inner,
       [type="button"]::-moz-focus-inner,
       [type="reset"]::-moz-focus-inner,
