--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
                   <div class="home-page2-container01">
                     <img
                       alt="image"
-                      src="public/external/wa.png"
+                      src="public/external/WA.png"
                       class="home-page2-image"
                     />
                   </div>
@@ -636,7 +636,7 @@
                   <div class="home-page2-container02">
                     <img
                       alt="image"
-                      src="public/external/FB.png"
+                      src="/public/external/FB.png"
                       class="home-page2-image1"
                     />
                   </div>
@@ -646,7 +646,7 @@
                   <div class="home-page2-container03">
                     <img
                       alt="image"
-                      src="public/external/iNS.png"
+                      src="/public/external/INS.png"
                       class="home-page2-image2"
                     />
                     <!-- <a href="web.facebook.com/rfcindonesian" target="_blank" rel="noreferrer noopener"  class="home-page2-text47">RFC Indonesia</a> -->
