--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
                   <div class="home-page2-container02">
                     <img
                       alt="image"
-                      src="/public/external/FB.png"
+                      src="public/external/FB.png"
                       class="home-page2-image1"
                     />
                   </div>
@@ -646,7 +646,7 @@
                   <div class="home-page2-container03">
                     <img
                       alt="image"
-                      src="/public/external/INS.png"
+                      src="public/external/INS.png"
                       class="home-page2-image2"
                     />
                     <!-- <a href="web.facebook.com/rfcindonesian" target="_blank" rel="noreferrer noopener"  class="home-page2-text47">RFC Indonesia</a> -->
@@ -659,7 +659,7 @@
                   <div class="home-page2-container05">
                     <img
                       alt="image"
-                      src="public/external/wa.png"
+                      src="public/external/WA.png"
                       class="home-page2-image3"
                     />
                   </div>
@@ -669,7 +669,7 @@
                   <div class="home-page2-container07">
                     <img
                       alt="image"
-                      src="public/external/fb.png"
+                      src="public/external/FB.png"
                       class="home-page2-image4"
                     />
                   </div>
@@ -679,7 +679,7 @@
                   <div class="home-page2-container09">
                     <img
                       alt="image"
-                      src="public/external/ins.png"
+                      src="public/external/INS.png"
                       class="home-page2-image5"
                     />
                   </div>
