responsive login & lokasi

--- a/login.html
+++ b/login.html
@@ -45,9 +45,9 @@
   <body>
     <div>
       <link href="css/login.css" rel="stylesheet" />
-      <div class="outlet-page">
+      <div class="login-page">
 <!-- navibar -->
-          <div class="outlet-navibar">
+  <div class="login-navibar">
   <!-- navibar logo container -->
     <div class="outlet-nav-logo">
       <img
