--- a/login.html
+++ b/login.html
@@ -90,7 +90,7 @@
         <li><a href="lokasi-outlet.html" class="Page-scroll">Lokasi Outlet</a></li>
         <li class="pembatas">|</li>
         <button class="login-button">
-        <a href="login.html" class="Page-scroll">Login</a>
+        <a href="/login.html" class="Page-scroll">Login</a>
         
         </button>
       </ul>
