penambahan +penyesuaian res 2/k

--- a/login.html
+++ b/login.html
@@ -88,7 +88,7 @@
         <li><a href="index.html#produk" class="Page-scroll">Produk</a></li>
         <li><a href="index.html#prioritas" class="Page-scroll">Mitra</a></li>
         <li><a href="lokasi-outlet.html" class="Page-scroll">Lokasi Outlet</a></li>
-        <li class="pembatas">|</li>
+        <li><a href="#" class="Page-scroll">|</a></li>
         <button class="login-button">
         <a href="/login.html" class="Page-scroll">Login</a>
         
