--- a/lokasi-outlet.html
+++ b/lokasi-outlet.html
@@ -83,7 +83,7 @@
 <!-- navibar link container -->
   <!-- <div class="home-page2-navimenu-container"> -->
     <div class="outlet-navibar-menu">
-      <ul class="flex-row"> <li><a href="/index.html" class="Page-scroll">Beranda</a></li>
+      <ul class="flex-row"> <li><a href="index.html" class="Page-scroll">Beranda</a></li>
         <li><a href="index.html#tentang" class="Page-scroll">Tentang Kami</a></li>
         <li><a href="index.html#produk" class="Page-scroll">Produk</a></li>
         <li><a href="index.html#prioritas" class="Page-scroll">Mitra</a></li>
