--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
             src="public/external/image2831427-rvx8-600h.png"
             class="mitra-image283"
           />
-            <button id="register-open-modal"class="button1">Ayo Bergabung dan Register disini !</button>
+            <button class="button1"><a href="https://system.rfc-friedchicken.com/register"></a>Ayo Bergabung dan Register disini !</button>
             <div class="section-4-container">
               
             <section id="langkah">
