--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                   <li><a href="lokasi-outlet.html" class="Page-scroll">Lokasi Outlet</a></li>
                   <li class="pembatas">|</li>
                   <button class="login-button">
-                    <a href="login.html" class="Page-scroll">Login</a>
+                    <a href="https://system.rfc-friedchicken.com/login" class="Page-scroll">Login</a>
                     
                     </button>
                 </ul>
@@ -528,7 +528,8 @@
             src="public/external/image2831427-rvx8-600h.png"
             class="mitra-image283"
           />
-            <button class="button1"><a href="https://system.rfc-friedchicken.com/register"></a>Ayo Bergabung dan Register disini !</button>
+            <button class="button1">
+              <a href="https://system.rfc-friedchicken.com/register"> Ayo Bergabung dan Register disini !</a></button>
             <div class="section-4-container">
               
             <section id="langkah">
