--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
                   <div class="home-page2-container01">
                     <img
                       alt="image"
-                      src="public/external/wa.png"
+                      src="public/external/whatsapp.png"
                       class="home-page2-image"
                     />
                   </div>
@@ -640,7 +640,7 @@
                   <div class="home-page2-container02">
                     <img
                       alt="image"
-                      src="public/external/FB.png"
+                      src="public/external/facebook.png"
                       class="home-page2-image1"
                     />
                   </div>
@@ -663,7 +663,7 @@
                   <div class="home-page2-container05">
                     <img
                       alt="image"
-                      src="public/external/wa.png"
+                      src="public/external/whatsapp.png"
                       class="home-page2-image3"
                     />
                   </div>
@@ -683,7 +683,7 @@
                   <div class="home-page2-container09">
                     <img
                       alt="image"
-                      src="public/external/ins.png"
+                      src="public/external/instagram.png"
                       class="home-page2-image5"
                     />
                   </div>
