--- a/lokasi-outlet.html
+++ b/lokasi-outlet.html
@@ -126,7 +126,7 @@
               <div class="wa">
                 <img
                 alt="wa"
-                src="public/external/WA.png"
+                src="public/external/whatsapp.png"
                 class="footer-wa"
                 
               />
@@ -135,7 +135,7 @@
               <div class="fb">
                 <img
                 alt="FB"
-                src="public/external/FB.png"
+                src="public/external/facebook.png"
                 class="footer-fb"
               />
               <a href="web.facebook.com/rfcindonesian" target="_blank" rel="noreferrer noopener"  class="sosial-text-container">RFC Indonesia</a>
@@ -143,7 +143,7 @@
               <div class="ig">
                 <img
                 alt="IG"
-                src="public/external/INS.png"
+                src="public/external/instagram.png"
                 class="footer-ig"
               />
               <a href="https://www.instagram.com/rfcindonesia_/" target="_blank" rel="noreferrer noopener"  class="sosial-text-container">@rfcindonesia_</a>
