--- a/mitra.html
+++ b/mitra.html
@@ -330,7 +330,7 @@
                   <div class="mitra-container01">
                     <img
                       alt="image"
-                      src="public/external/WA.png"
+                      src="public/external/whatsapp.png"
                       class="mitra-image"
                     />
                   </div>
@@ -343,7 +343,7 @@
                   <div class="mitra-container02">
                     <img
                       alt="image"
-                      src="public/external/FB.png"
+                      src="public/external/facebook.png"
                       class="mitra-image1"
                     />
                   </div>
@@ -353,7 +353,7 @@
                   <div class="mitra-container03">
                     <img
                       alt="image"
-                      src="public/external/ins.png"
+                      src="public/external/instagram.png"
                       class="mitra-image2"
                     />
                   </div>
@@ -365,7 +365,7 @@
                   <div class="mitra-container05">
                     <img
                       alt="image"
-                      src="public/external/WA.png"
+                      src="public/external/whatsapp.png"
                       class="mitra-image3"
                     />
                   </div>
@@ -375,7 +375,7 @@
                   <div class="mitra-container07">
                     <img
                       alt="image"
-                      src="public/external/FB.png"
+                      src="public/external/facebook.png"
                       class="mitra-image4"
                     />
                   </div>
@@ -385,7 +385,7 @@
                   <div class="mitra-container09">
                     <img
                       alt="image"
-                      src="public/external/INS.png"
+                      src="public/external/instagram.png"
                       class="mitra-image5"
                     />
                   </div>
