--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
                   <div class="home-page2-container03">
                     <img
                       alt="image"
-                      src="public/external/iNS.png"
+                      src="public/external/instagram.png"
                       class="home-page2-image2"
                     />
                     <!-- <a href="web.facebook.com/rfcindonesian" target="_blank" rel="noreferrer noopener"  class="home-page2-text47">RFC Indonesia</a> -->
@@ -673,7 +673,7 @@
                   <div class="home-page2-container07">
                     <img
                       alt="image"
-                      src="public/external/fb.png"
+                      src="public/external/facebook.png"
                       class="home-page2-image4"
                     />
                   </div>
