--- a/index.html
+++ b/index.html
@@ -377,8 +377,10 @@
             </section>
           </div>
           <div class="mitra-page">
+            <div class="bg-side-continer1"></div>
+            <div class="bg-side-continer2"></div>
             <div class="mitra-side-bg">
-              <img
+              <!-- <img
                 alt="Sideplain0111352"
                 src="public/external/sideplain0111352-0yol-4900h.png"
                 class="mitra-sideplain011"
@@ -387,7 +389,7 @@
                 alt="Sideplain0211352"
                 src="public/external/sideplain0211352-x5ku-4600h.png"
                 class="mitra-sideplain021"
-              />
+              /> -->
             </div>
             <div class="mitra-pemisah">
            
